--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       border-radius: 22px;
       text-align: center;
       box-shadow: 0 18px 60px rgba(0,0,0,.15);
+      overflow: hidden;
     }
 
     .art {
@@ -125,11 +126,25 @@
       display: none;
       margin-top: 18px;
       animation: pop .35s ease;
+      max-width: 100%;
+      overflow: hidden;
     }
 
     .result h2 {
       font-size: clamp(30px, 4.5vw, 46px);
       margin: 10px 0;
+      overflow-wrap: break-word;
+      word-break: break-word;
+    }
+
+    .result img {
+      max-width: min(380px, 100%);
+      width: auto;
+      height: auto;
+      display: block;
+      margin: 10px auto 0;
+      border-radius: 12px;
+      object-fit: contain;
     }
 
     .fireworks {
