--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       --card: #ffffffcc;
       --yes: #ff3b7a;
       --yesHover: #ff1f68;
+      --love: #c41e5a;
+      --loveSoft: #e91e6f;
     }
 
     * { box-sizing: border-box; }
@@ -67,6 +69,36 @@
     h1 {
       font-size: clamp(26px, 4vw, 44px);
       margin: 12px 0 18px;
+      font-weight: 600;
+      letter-spacing: 0.02em;
+      color: var(--love);
+      text-shadow: 0 2px 12px rgba(196, 30, 90, 0.25);
+      font-family: Georgia, "Times New Roman", serif;
+      line-height: 1.3;
+    }
+
+    #girlName {
+      background: linear-gradient(135deg, var(--love) 0%, var(--loveSoft) 50%, #d81b60 100%);
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: none;
+    }
+
+    #girlName::after {
+      content: "";
+      display: block;
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: -4px;
+      height: 3px;
+      background: linear-gradient(90deg, transparent, rgba(196, 30, 90, 0.4), transparent);
+      border-radius: 2px;
+    }
+
+    .card > h1 {
+      position: relative;
     }
 
     .button-zone {
